manifests/media/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  labels:
    app: sabnzbd
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
      - image: lscr.io/linuxserver/sabnzbd:version-4.5.3
        name: sabnzbd
        volumeMounts:
        - name: config
          mountPath: /config
          subPath: sabnzbd/config
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: media-nfs
